fix: helm release dependency check

--- a/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/observed.yaml
+++ b/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/observed.yaml
@@ -6,7 +6,7 @@ metadata:
     crossplane.io/composition-resource-name: daemon-set
 status:
   atProvider:
-    data:
+    manifest:
       status:
         desiredNumberScheduled: 1
         numberAvailable: 1
