--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
@@ -18,29 +18,47 @@ spec:
         imageVersion: "8.0.39-30.1" #example
         storageSize: "20Gi"
         replicas: 3
-        requests:
-          memory: 2Gi
-          cpu: "1"
-        limit:
-          memory: 4Gi
-          cpu: "2"
+        resources:
+          requests:
+            memory: 2Gi
+            cpu: "1"
+          limit:
+            memory: 4Gi
+            cpu: "2"
+        configuration: |
+          [mysqld]
+          pxc_strict_mode=PERMISSIVE
+          default_authentication_plugin=mysql_native_password
+          max_allowed_packet=16M
+          bind-address="*"
+          character-set-server=UTF8
+          collation-server=utf8_general_ci
+          general_log=0
+          slow_query_log=0
+          long_query_time=10
+          innodb_use_native_aio=0
+          max_connections=2000
+          innodb_buffer_pool_size=2147483648
+          wsrep_auto_increment_control=OFF
       haproxy:
         imageVersion: "2.8.11" #example
         replicas: 2
-        requests:
-          memory: 1Gi
-          cpu: 500m
-        limit:
-          memory: 2Gi
-          cpu: "1"
+        resources:
+          requests:
+            memory: 1Gi
+            cpu: 500m
+          limit:
+            memory: 2Gi
+            cpu: "1"
       logcollector:
         imageVersion: "1.16.1-logcollector-fluentbit3.2.2" #example
-        requests:
-          memory: 200Mi
-          cpu: 100m
-        limit:
-          memory: 500Mi
-          cpu: 200m
+        resources:
+          requests:
+            memory: 200Mi
+            cpu: 100m
+          limit:
+            memory: 500Mi
+            cpu: 200m
       backup:
         imageVersion: "1.14.0" # example
         verifyTLS: true
