--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: my-namespace
 spec:
   parameters:
-    consumerClusterType: controlcenter
+    consumerClusterType: environment
     clusterName: my-cluster
     externalServiceName: my-cluster-service
     appNamespace: my-app
