--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
@@ -42,6 +42,7 @@ spec:
           wsrep_auto_increment_control=OFF
       haproxy:
         imageVersion: "2.8.11" #example
+        expose: false
         replicas: 2
         resources:
           requests:
