--- a/packages/sc-bootstrap/compositions/scbootstrap/resources/definition.yaml
+++ b/packages/sc-bootstrap/compositions/scbootstrap/resources/definition.yaml
@@ -24,7 +24,9 @@ spec:
             properties:
               managementPolicies:
                 default:
-                  - "*"
+                  - Create
+                  - LateInitialize
+                  - Observe
                 description: |-
                   A ManagementAction represents an action that the Crossplane controllers
                   can take on an external resource.
