--- a/packages/aws-rdscluster/compositions/rdscluster/resources/composition.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/resources/composition.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: aws.mojaloop.io/v1alpha1
-    kind: XDocDbCluster
+    kind: XRDSCluster
   mode: Pipeline
   pipeline:
 
