--- a/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: aws.mojaloop.io/v1alpha1
-kind: XDocDbCluster
+kind: XRDSCluster
 metadata:
   name: example-rds-cluster
   namespace: default
@@ -22,13 +22,6 @@ spec:
       engineVersion: "8.0.mysql_aurora.3.04.0"
       family: "aurora-mysql8.0"
       instanceCount: 1
-      options:
-        - option_name: MARIADB_AUDIT_PLUGIN
-          option_settings:
-            - name: SERVER_AUDIT_EVENTS
-              value: CONNECT
-            - name: SERVER_AUDIT_FILE_ROTATIONS
-              value: "37"
       parameter:
       - name: character_set_client
         value: utf8mb4
@@ -45,8 +38,8 @@ spec:
       skipFinalSnapshot: true
       finalSnapshotIdentifier: "example-rds-cluster"
       storageEncrypted: true
-      storageType: "standard"
-      subnets: "subnet-069e236a1ed7dc46e,subnet-0ea1f4922f23fd864,subnet-0ec26f852579a3c5c"
+      storageType: "io1"
+      subnets: "subnet-0fb26add714322910,subnet-044648d6e6107d293,subnet-0252e9bfa6e483fd7"
       username: "mojaloop"
       vpcCidr: "10.0.0.0/16"
-      vpcId: "vpc-0271a5e44676a5443"
+      vpcId: "vpc-07ff0e8c129aa5db0"
