--- a/packages/aws-s3bucket/compositions/s3bucket/resources/definition.yaml
+++ b/packages/aws-s3bucket/compositions/s3bucket/resources/definition.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xs3bucket.aws.mojaloop.io
+  name: xs3buckets.aws.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: aws.mojaloop.io
