--- a/packages/aws-s3bucket/compositions/s3bucket/test/scenarios/standard/claim.yaml
+++ b/packages/aws-s3bucket/compositions/s3bucket/test/scenarios/standard/claim.yaml
@@ -1,11 +1,11 @@
 apiVersion: aws.mojaloop.io/v1alpha1
 kind: XS3Bucket
 metadata:
-  name: example-s3bucket-bronco123
+  name: example-s3bucket
   namespace: default
 spec:
   parameters:
-    bucketName: "example-s3bucket-bronco123"
+    bucketName: "example-s3bucket-someuniquestring"
     bucketRegion: "eu-west-1"
     forceDestroy: false
     deletionPolicy: "Delete"
