--- a/packages/objectstores/compositions/object-store/resources/definition.yaml
+++ b/packages/objectstores/compositions/object-store/resources/definition.yaml
@@ -67,6 +67,9 @@ spec:
                         type: string
                         description: The name of the provider config to use for the remote k8s provider.
                         default: "kubernetes-provider"
+                      namespace:
+                        type: string
+                        description: Namespace to create the bucket credentials in
                       storageClassName:
                         type: string
                         description: Storage class to use for the bucket creation
