--- a/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
@@ -47,9 +47,19 @@ spec:
                   awsProviderConfigName:
                     type: string
                     description: AWS Provider Config Name
+                  ccK8sProviderName:
+                    type: string
+                    description: |-
+                      The name of the provider config to use for the local k8s provider.
               parameters:
                 type: object
                 properties:
+                  externalServiceName:
+                    type: string
+                    description: Name for the external service object created
+                  appNamespace:
+                    type: string
+                    description: Namespace for the consumer application
                   allowMajorVersionUpgrade:
                     description: Indicates that major version upgrades are allowed
                     type: boolean
