--- a/packages/aws-rdscluster/compositions/rdscluster/test/providers.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/providers.yaml
@@ -18,3 +18,10 @@ metadata:
   name: provider-aws-ec2
 spec:
   package: xpkg.upbound.io/upbound/provider-aws-ec2:v1
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-kubernetes
+spec:
+  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.15.0
