--- a/packages/utils/compositions/configmap-from-secret/test/scenarios/standard/claim.yaml
+++ b/packages/utils/compositions/configmap-from-secret/test/scenarios/standard/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: utils.mojaloop.io/v1alpha1
-kind: XSecretconfigMap
+kind: XConfigMapfromSecret
 metadata:
   name: example-secret-configmap-claim
   namespace: temp
