fix: claim default namespace

--- a/packages/utils/compositions/configmap-from-secret/test/scenarios/standard/claim.yaml
+++ b/packages/utils/compositions/configmap-from-secret/test/scenarios/standard/claim.yaml
@@ -2,7 +2,7 @@ apiVersion: utils.mojaloop.io/v1alpha1
 kind: XConfigMapfromSecret
 metadata:
   name: example-secret-configmap-claim
-  namespace: temp
+  namespace: default
 spec:
   parameters:
     keyMappings:
