--- a/packages/objectstores/compositions/s3-bucket/resources/definition.yaml
+++ b/packages/objectstores/compositions/s3-bucket/resources/definition.yaml
@@ -49,29 +49,92 @@ spec:
                   The name of the provider config to use for the source and destination k8s providers.
                 required:
                   - awsProviderName
+                  - k8sProviderName
                 properties:
                   awsProviderName:
                     type: string
                     description: |-
                       The name of the provider config to use for the source k8s provider.
+                  k8sProviderName:
+                    type: string
+                    description: |-
+                      The name of the provider config to use for the k8s provider.
               parameters:
                 type: object
                 description: |-
                   The parameters for the S3 bucket.
                 required:
-                  - bucketName
+                  - bucket
+                  - secret
                 properties:
-                  bucketName:
-                    type: string
-                  bucketRegion:
-                    type: string
-                    default: "eu-west-1"
-                  forceDestroy:
-                    type: boolean
-                    default: false
-                  deletionPolicy:
-                    type: string
-                    default: "Delete"
+                  bucket:
+                    type: object
+                    description: |-
+                      The parameters for the S3 bucket.
+                    required:
+                      - bucketName
+                    properties:
+                      bucketName:
+                        type: string
+                      bucketRegion:
+                        type: string
+                        default: "eu-west-1"
+                      forceDestroy:
+                        type: boolean
+                        default: false
+                      deletionPolicy:
+                        type: string
+                        default: "Delete"
+                  secret:
+                    type: object
+                    description: |-
+                      Secrets params for sync.
+                    required:
+                      - name
+                      - namespace
+                    properties:
+                      namespace:
+                        type: string
+                        description: |-
+                          Namespace of the secret to sync from source cluster.
+                      name:
+                        type: string
+                        description: |-
+                          Name of the secret to sync from storage cluster.
+                      esoPushSecret:
+                        type: boolean
+                        description: |-
+                          Whether to push the secret to vault.
+                        default: false
+                      esoUpdatePolicy:
+                        type: string
+                        description: |-
+                          Policy to update the secret on vault.
+                        default: "Replace"
+                      esoDeletePolicy:
+                        type: string
+                        description: |-
+                          Policy to delete the secret on vault.
+                        default: "Delete"
+                      esoRefreshInterval:
+                        type: string
+                        description: |-
+                          Interval to refresh the secret on vault.
+                        default: "1m"
+                      vaultSecretStore:
+                        type: string
+                        description: |-
+                          Name of the secretstore on cluster for vault.
+                        default: "vault-secret-store"
+                      vaultSecretStoreKind:
+                        type: string
+                        description: |-
+                          Kind of the secret store in vault.
+                        default: "ClusterSecretStore"
+                      vaultSecretPath:
+                        type: string
+                        description: |-
+                          Path of the secret in vault.
           status:
             type: object
             properties:
