--- a/packages/objectstores/compositions/s3-bucket/test/scenarios/standard/claim.yaml
+++ b/packages/objectstores/compositions/s3-bucket/test/scenarios/standard/claim.yaml
@@ -5,11 +5,19 @@ metadata:
   namespace: default
 spec:
   parameters:
-    bucketName: "example-s3bucket-someuniquestring"
-    bucketRegion: "eu-west-1"
-    forceDestroy: false
-    deletionPolicy: "Delete"
+    bucket:
+      bucketName: "example-s3bucket-someuniquestring"
+      bucketRegion: "eu-west-1"
+      forceDestroy: false
+      deletionPolicy: "Delete"
+    secret:
+      name: "example-s3bucket-secret"
+      namespace: "default"
+      esoPushSecret: true
+      vaultSecretStore: "vault-secret-store"
+      vaultSecretPath: "example-s3bucket"
   providerConfigsRef:
-    awsProviderName: "aws-provider"
+      awsProviderName: "aws-provider"
+      k8sProviderName: "kubernetes-provider"
   managementPolicies:
     - "*"
