--- a/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
+++ b/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
@@ -8,7 +8,7 @@ spec:
     objectStoreProvider: "s3"
     bucketName: "example-mojaloopxyz-object-store"
     ccK8sProviderName: "kubernetes-provider"
-    esoPushSecret: false
+    esoPushSecret: true
     vaultSecretStore: "vault-backend"
     vaultSecretPath: "objectstore/my_example_bucket"
     namespace: "default"
