--- a/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/sc/claim.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/sc/claim.yaml
@@ -5,6 +5,14 @@ metadata:
   namespace: testa
 spec:
   parameters:
+    zitadelProjectIdSecret:
+      name: "zit-projid-secret-name"
+      namespace: "zit-projid-secret-namespace"
+      key: "zit-projid-secret-key"
+    groupNames:
+      admin: techops-admin
+      externalAccess: techops-users
+      kubeapiResourceGroup: sc-k8s
     serviceUserName: testserviceuser
     accessTokenExpiresInDays: 5
     operatorKubeapiGroup: testgroup
