--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -73,3 +73,6 @@ spec:
                     operatorArgoAppSourceRevision:
                       type: string
                       description: Revision for argo app source.
+                    operatorKubeapiGroupName:
+                      type: string
+                      description: Group name to associate with netbird kubeapi resource.
